# arbitrum-reth

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  OPERATIONS.md  README.md  SECURITY.md  clippy.toml  codecov.yml  deny.toml  docker-compose.yml  rustfmt.toml
crates/arb-context/: Cargo.toml
crates/arb-context/src/: lib.rs
crates/arb-context/tests/: ctx_test.rs
crates/arb-errors/: Cargo.toml
crates/arb-errors/src/: error.rs  lib.rs
crates/arb-spec-tests/: Cargo.toml  README.md
crates/arb-spec-tests/fixtures/_wat/: hostio_account_code_loop.wat
crates/arb-spec-tests/fixtures/arbos/: gate_arbnativetokenmanager_35_41.json  gate_arbowner_1318_multi_constraint_fix.json  gate_arbowner_28_60.json  gate_arbowner_338_60.json  gate_arbretryabletx_394_multi_gas_constraints.json  gate_arbretryabletx_397_multi_constraint_fix.json  gate_arbretryabletx_424_multi_gas_constraints.json  gate_arbretryabletx_429_50.json  gate_arbretryabletx_432_multi_constraint_fix.json  gate_arbwasm_98_stylus_charging_fixes.json  gate_block_processor_300_50.json  gate_build_1089_40.json  gate_build_1531_50.json  gate_build_1549_50.json  gate_build_2157_multi_gas_constraints.json  gate_build_2347_multi_gas_constraints.json  gate_build_399_40.json  gate_evm_1033_60.json  gate_evm_1193_stylus_fixes.json  gate_evm_api_impl_454_dia.json  gate_evm_api_impl_455_dia.json  gate_host_100_stylus_charging_fixes.json  gate_host_192_stylus_charging_fixes.json  gate_host_199_stylus_charging_fixes.json  gate_host_4_stylus_charging_fixes.json  gate_internal_tx_445_50.json  gate_lib_546_30.json  gate_lib_555_50.json  gate_mod_282_50.json  gate_mod_289_50.json  gate_mod_374_stylus_fixes.json  gate_mod_8_stylus_fixes.json  gate_model_32_60.json  gate_model_363_60.json  gate_model_370_50.json  gate_model_38_50.json  (+17 more)
crates/arb-spec-tests/src/: case.rs  execution.rs  mode.rs  runner.rs
crates/arb-spec-tests/tests/: pending_sepolia_152472573_direct_activate_v40.rs  sepolia_112694675.rs  sepolia_115184744.rs  sepolia_115187469.rs  sepolia_128015513.rs  sepolia_130021029.rs  sepolia_139306946.rs  sepolia_149889087.rs  sepolia_152429039.rs  sepolia_152472573_direct_activate_v40.rs  sepolia_169854826.rs  sepolia_179288677.rs  sepolia_179288678.rs  sepolia_185892958_failed_activate_v40.rs  sepolia_204060366_pre_recorded_revert.rs  sepolia_204060502_stylus_gas_drift.rs  sepolia_213061213_stylus_multicall_7702.rs  sepolia_235386091_redeem_six_constraints.rs  spec.rs
crates/arb-storage-errors/: Cargo.toml
crates/arb-storage-errors/src/: any.rs  db.rs  lib.rs  storage.rs
crates/arb-txpool/: Cargo.toml
crates/arb-txpool/src/: error.rs  lib.rs  transaction.rs
crates/arb-txpool/tests/: error_variants.rs  pool_wrapper.rs
(+644 files in other folders)
