[package]
name = "arb-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
alloy-primitives = { workspace = true, features = ["std"] }
arb-storage = { workspace = true }
arbos = { workspace = true }
parking_lot = { workspace = true }

[lints]
workspace = true
