[package]
name = "arb-spec-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "JSON-fixture conformance tests for arbreth"

[dependencies]
arb-test-utils = { workspace = true }
arb-test-harness = { workspace = true }
arbos = { workspace = true }
arb-storage = { workspace = true }
alloy-primitives = { workspace = true, features = ["std", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
walkdir = "2"
thiserror = { workspace = true }
hex = { workspace = true }
ureq = { version = "2", default-features = false }

[features]
# Opt-in feature for fixtures that drive a release `arb-reth` binary
# (set via `ARB_SPEC_BINARY`) or talk to a remote RPC node
# (set via `ARB_SPEC_RPC_URL`). Without this feature those tests are
# marked `#[ignore]` so `cargo test --workspace` surfaces them in the
# `ignored` count rather than silently skipping.
spec-binary = []

[lints]
workspace = true
