[package]
name = "arb-txpool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arb-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
c-kzg = { workspace = true }
derive_more = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-primitives-traits = { workspace = true }

[lints]
workspace = true
